# kanderli

./: Dockerfile  README.md  compose.yaml  package-lock.json  package.json  pyproject.toml
bot/: bot.py
bot/cogs/: commands.py
src/: index.ts
