[project]
name = "kanderli"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "aiohttp>=3.13.5",
    "python-dotenv>=1.2.2",
    "yt-dlp>=2026.3.17",
    "pynacl>=1.6.2",
    "davey>=0.1.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.14",
]
